--- a/views/user.ejs
+++ b/views/user.ejs
@@ -12,7 +12,7 @@
 
     <script>
       $(document).ready(function() {
-            //$('.arrow, [class^=arrow-]').bootstrapArrows();
+            $('.arrow, [class^=arrow-]').bootstrapArrows();
 
             alert('Testing...');
             var socket = io();
@@ -130,7 +130,7 @@
                 </h3>
                 <br>
                 <div class="col-md-offset-3" id="actualState">
-                    <span class="arrow-success-large" data-angle="90" id="arrowState"></span>
+                    <!--<span class="arrow-success-large" data-angle="90" id="arrowState"></span>-->
                     <h3 id="arrowStateS">Stopped</h3>
                 </div>
                 <p></p>
@@ -139,14 +139,7 @@
             </div>
           </div>
         </div>
-        <div class="section">
-          <div class="container">
-            <div class="row">
-              <div class="col-md-offset-1 col-md-1"></div>
-            </div>
-          </div>
-        </div>
 
-        <script>$('.arrow, [class^=arrow-]').bootstrapArrows();</script>
+        <!-- <script>$('.arrow, [class^=arrow-]').bootstrapArrows();</script> -->
 
 </body></html>
