Developing socket.io

--- a/views/user.ejs
+++ b/views/user.ejs
@@ -12,9 +12,8 @@
 
     <script>
       $(document).ready(function() {
-        $('.arrow, [class^=arrow-]').bootstrapArrows();
+        //$('.arrow, [class^=arrow-]').bootstrapArrows();
 
-        alert('Testing...');
         var socket = io();
 
         $("#arrowState").hide();
@@ -139,6 +138,6 @@
           </div>
         </div>
 
-        <!-- <script>$('.arrow, [class^=arrow-]').bootstrapArrows();</script> -->
+        <script>$('.arrow, [class^=arrow-]').bootstrapArrows();</script>
 
 </body></html>
