Improving jQuery arrows

--- a/views/user.ejs
+++ b/views/user.ejs
@@ -41,7 +41,7 @@
                             "data-angle" : data
                         })
                         .show()
-    		    .dynamycArrow();
+    		            .dynamicArrow();
                     $("#arrowStateS").hide();
                 }
             });
