Improving jQuery arrows

--- a/views/user.ejs
+++ b/views/user.ejs
@@ -130,7 +130,9 @@
                 </div>
               </div>
               <div class="col-md-6">
-                <h2><b><p id="usersConnected" class="text-info"></p></b></h2>
+                <div class="panel panel-primary">
+                    <h2><b><p id="usersConnected" class="text-info"></p></b></h2>
+                </div>
                 <p></p>
                 <p>
                   <br>
