--- a/views/user.ejs
+++ b/views/user.ejs
@@ -133,6 +133,7 @@
                 <div class="panel panel-primary">
                     <h2><b><p id="usersConnected" class="text-info"></p></b></h2>
                 </div>
+                prueba
                 <p></p>
                 <p>
                   <br>
