Improved jQuery and Socket.io communication

--- a/views/user.ejs
+++ b/views/user.ejs
@@ -26,7 +26,7 @@
         		return this;
         	}
 
-            var socket = io({user: <%= user %>});
+            var socket = io();
 
             $("#arrowState").hide();
 
@@ -131,12 +131,9 @@
               </div>
               <div class="col-md-6">
                 <div class="panel panel-success">
-		            <div class="panel-heading">
-			            <h2><p id="usersConnected" class="text-info"></p></h2>
-		            </div>
-                    <div class="panel-body">
-			            <p id="usernames" class="bg-primary"></p>
-		            </div>
+		   <div class="panel-heading">
+		       <h2><p id="usersConnected" class="text-info"></p></h2>
+		   </div>
                 </div>
                 <p></p>
                 <p>
