Added information about online users

--- a/views/user.ejs
+++ b/views/user.ejs
@@ -100,7 +100,6 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="page-header">
-                            <!-- <h1>Welcome user! -->
                             <h1>Welcome <%= user %>!
                                 <small>Robot Controller</small>
                             </h1>
@@ -139,7 +138,7 @@
                 </div>
               </div>
               <div class="col-md-6">
-                <div class="panel panel-success">
+                <div class="text-center panel panel-success">
 		            <div class="panel-heading">
 		                <h2><p id="usersConnected" class="text-info"></p></h2>
 		            </div>
